overflow fix

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav li {
 footer {
     background-color: #333;
     color: white;
-    padding: 20px;
+    padding: 20px 0;
     text-align: center;
     position: absolute;
     bottom: 1;
